<resources>
    <string name="app_name">BASE_ROOM_DB</string>
    <string name="add_item">Add item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add Task</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="priority">Priority :</string>
    <string name="status">Status :</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>